fixed number fluency app functionality on small screens; known bug in lowercase alphabet touch

--- a/resources/css/alphabet-card-touch.css
+++ b/resources/css/alphabet-card-touch.css
@@ -8,6 +8,7 @@
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 :root {
   --clr-or: hsl(43, 89%, 38%);
@@ -64,13 +65,15 @@ body:not(:has(*)) {
   background: #222;
   display: grid;
   grid-template-columns: 0.15fr 1fr 1fr 0.15fr;
-  grid-template-rows: 0.2fr 0.05fr 0.05fr 0.05fr 1fr 0.05fr;
+  grid-template-rows: 0.05fr 0.05fr 0.05fr 0.05fr 1fr 0.2fr 0.2fr 0.2fr;
   grid-template-areas:
-    "..... home-btn-container home-btn-container ....."
+    "..... ..... ..... ....."
     "..... btn-container1 btn-container1 ....."
     "..... btn-container3 btn-container3 ....."
     "..... ..... ..... ....."
     ".....  card-grid card-grid ....."
+    "..... ..... ..... ....."
+    "..... home-btn-container home-btn-container ....."
     "..... ..... ..... .....";
   place-content: center;
   place-items: center;
